RESOLVED FIXED192602
WebCore shouldn't have a Objective-C class named NSCursor
https://bugs.webkit.org/show_bug.cgi?id=192602
Summary WebCore shouldn't have a Objective-C class named NSCursor
Tim Horton
Reported 2018-12-11 12:53:24 PST
WebCore shouldn't have a Objective-C class named NSCursor
Attachments
Patch (4.60 KB, patch)
2018-12-11 12:54 PST, Tim Horton
no flags
Patch (4.76 KB, patch)
2018-12-11 12:55 PST, Tim Horton
no flags
Tim Horton
Comment 1 2018-12-11 12:54:19 PST
Tim Horton
Comment 2 2018-12-11 12:55:32 PST
Tim Horton
Comment 3 2018-12-11 12:55:46 PST
WebKit Commit Bot
Comment 4 2018-12-11 13:54:28 PST
Comment on attachment 357071 [details] Patch Clearing flags on attachment: 357071 Committed r239088: <https://trac.webkit.org/changeset/239088>
WebKit Commit Bot
Comment 5 2018-12-11 13:54:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.